经济学人的文章加周记更新

--- a/_posts/2026-02-03-20260203-20260208周记.md
+++ b/_posts/2026-02-03-20260203-20260208周记.md
@@ -84,8 +84,6 @@ tags:
 
 6. x左移to，y右移to的结果就等于x和y的卷积，想想左坐标和右坐标其实都没变。
 
-
-
 ？？？三道例题
 
 任何函数卷积δ（t）等于原函数。
@@ -108,8 +106,6 @@ tags:
 
 第三章：连续信号频域分析（傅里叶变换）
 
-
-
 **作业**
 
 1. δ（t）的n次导函数
@@ -119,3 +115,21 @@ tags:
    1. 编程如何得到离散卷积左边的未知量
    
    2. 以及连续卷积的话，负无穷到正无穷积分和很大数的积分的结果的区别
+
+## 20260207
+
+### 计划
+
+1. 单词
+
+2. 2小时信号与系统
+
+3. 一篇经济学人的文章
+
+### 复盘
+
+1. 经济学人文章看了一部分
+
+2. 和姜晨沟通接送事宜，回头看沟通得太晚，人家都快下高铁了，再问人家太唐突，咨询豆包，给出的建议还蛮有道理的，以后拿不准的可以问问豆包。我妈还强行想让人家不同意的情况下去车站堵人家，回来又哭又闹，说真的，让我想到小时候在篮球场的痛苦回忆了，我妈一直以来都有极端的倾向，从中午到晚上和我妈大吵特吵，算是解决了我妈用力过猛，帮倒忙的问题，晚上以此为契机，和姜晨聊了下，感觉还行，不过我还是觉得她对我兴趣不大，比如说22：37发的消息问的她，第二天才回复，当然也可能确实早睡了，不好说，不过我还是持保留态度。
+
+3. 房产过户琐事
