更新机器学习和灵感以及周记

--- a/_posts/2026-02-03-20260203-20260208周记.md
+++ b/_posts/2026-02-03-20260203-20260208周记.md
@@ -136,10 +136,16 @@ tags:
 
 ## 20260208
 
-- [ ] 单词：复习加新单词
+### 计划
+
+- [x] 单词：复习加新单词
 
 - [ ] 2小时信号与系统
 
-- [ ] 两小时机器学习
+- [x] 两小时机器学习
 
 #### 复盘
+
+### 杂事
+
+1. 空调维修
