我的梦想及周记更新

--- a/_posts/2026-02-09-20260209-20260215周记.md
+++ b/_posts/2026-02-09-20260209-20260215周记.md
@@ -1,18 +1,16 @@
 ---
-
 title: '20260209-20260215周记'
 date: 2026-02-09
 permalink: /posts/2026/02/20260209-20260215周记/
 tags:
     - 周记
-
 ---
 
 # 20260209
 
 ## 计划
 
-- [ ] 单词
+- [x] 单词
 
 - [ ] 两小时信号与系统
 
@@ -20,4 +18,40 @@ tags:
 
 ## 复盘
 
-我在想要不要把那个分析时序数据的那个书好好看下，好好的编程联系下，另外就是工具的运用
+我在想要不要把那个分析时序数据的那个书好好看下，好好的编程联系下，另外就是工具的运用。
+
+昨天姨妈家来访，计划未遂，信号与系统看了不到两小时但是1个小时应该还是有的。
+
+# 傅里叶级数
+
+傅里叶级数的复数表达形式更加方便
+
+<mark>复数形式的推导</mark>
+
+直流分量，一个周期x的平均量
+
+复数转正常形式的关键在于：k=-1和k=1的情况的合并为cos或sin
+
+狄利赫利三条件：
+
+其中绝对可积和最值有限能保证引理一成立
+
+引理二
+
+引理三
+
+证明以2$\pi$为周期
+
+一个技巧就是把分母等于0的那个点减掉
+
+# 20260210
+
+# 计划
+
+1. 单词
+
+2. 2小时信号与系统
+
+3. 深度学习2小时
+
+4. 1小时时序脑电数据分析那本书的python实现，更好的理解信号与系统
