对我的梦想以及时间节点还有EEG数据分析的笔记

--- a/_posts/2026-02-09-20260209-20260215周记.md
+++ b/_posts/2026-02-09-20260209-20260215周记.md
@@ -46,12 +46,20 @@ tags:
 
 # 20260210
 
-# 计划
+## 计划
 
-1. 单词
+- [ ] 单词
 
-2. 2小时信号与系统
+- [ ] 2小时信号与系统
 
-3. 深度学习2小时
+- [ ] 深度学习2小时
 
-4. 1小时时序脑电数据分析那本书的python实现，更好的理解信号与系统
+- [x] 1小时时序脑电数据分析那本书的python实现，更好的理解信号与系统
+
+- [ ] 找到电路原理的课程
+
+## 杂项
+
+- [ ] 感觉是不是有必要运动
+
+- [ ] 感觉是不是有必要买书
