--- a/_posts/2026-02-08-深度学习（李沐加李宏毅的课程）.md
+++ b/_posts/2026-02-08-深度学习（李沐加李宏毅的课程）.md
@@ -6,7 +6,7 @@ tags:
     - 深度学习
 ---
 
-# 深度学习笔记（李沐加李宏毅的课程）
+# 深度学习笔记第一二章（李沐加李宏毅的课程）
 
 - 有问题的地方都以下划线的形式标出
 
@@ -147,3 +147,15 @@ Rectified Linear Unit,ReLU修正线性单元：$c ∗ max(0, b + wx_1)$
    1. 较少的参数：例子就是cnn比全连接网络要限制大，但在图像上效果好
    2. 比较少的特征
    3. 别的方法：正则化，dropout等等
+
+一个很有意思的情况就是你假如说用三个模型去测试集上测，哪个好就用哪个的化会出现一个情况，就是即使是一个模型的作用是随机输出，只要模型足够多，也可以在测试集上取得很好的效果，但这种模型在私人数据集上就毫无用处。
+
+### 2.4 交叉验证
+
+就是训练数据分为训练集和验证集，然后公开测试集的结果就能反映私人测试集的结果，但是这个循环太多次，也就过拟合了，真的是有点哲学的味道在里面。
+
+为了解决选的训练集和验证集没有代表性，会采用一个方法：k 折交叉验证(k-fold  cross validation)，就是训练集分成假设份，然后任意两份训练一份验证，最后取平均这样来选模型，选完模型再全部用到训练集上。
+
+### 2.5 不匹配
+
+是测试集和训练集的分布不同，这个匹不匹配的问题涉及到对数据的理解。
