--- a/_posts/2026-02-09-20260209-20260215周记.md
+++ b/_posts/2026-02-09-20260209-20260215周记.md
@@ -48,7 +48,7 @@ tags:
 
 ## 计划
 
-- [ ] 单词
+- [x] 单词
 
 - [ ] 2小时信号与系统
 
@@ -63,3 +63,89 @@ tags:
 - [ ] 感觉是不是有必要运动
 
 - [ ] 感觉是不是有必要买书
+
+## 复盘
+
+昨天其实是很好的机会结果自己还是没把时间利用上，也没有和姜晨聊天，在漫无目的的看股票信息，更离谱的是昨天一天似乎就花了4GB的流量也不知道花在哪了？难道是花在测速上了，感觉也不太像。
+
+# 20260211
+
+今天立帖为证，这几项计划不完成我今天不睡觉，今日事，今日毕
+
+### 计划
+
+- [x] 单词
+
+- [x]  深度学习两小时
+
+- [x] 信号与系统，不一定要听课，复习搞懂之前没懂的也可以2小时
+
+- [x] 神经时序分析1小时
+
+### 杂项
+
+1. 找到电路的课程，清华的电路原理课程
+
+### 复盘
+
+任务基本完成，但是感觉可以做到更多，更安静，更冷静，更抓住，搞清楚自己的主线，不要晃。
+
+# 函数的正交分解
+
+称正交函数族，一族函数任选两个，积分$\theta_i\theta_j的共轭$等于0，就说是正交函数族
+
+内积运算（满足4个性质）：
+
+1. 交换律，<x,y>=<y,x>的共轭
+
+2. 齐次性
+
+3. 叠加性
+
+4. 非负性，x自己的内积是大于等于0的
+
+把此运算叫做内积
+
+第一个内积$/integrate$
+
+## 正交基函数：
+
+1. 自己与自己内积大于0
+
+2. 不一样的函数内积是等于0的
+
+正交函数族是针对某个定义的内积而言的。
+
+而之前的cos，sin函数定义的内积的定义:就是乘积在周期T积分等于0
+
+## 标准正交基函数:
+
+若函数族满足:
+
+1. 自己与自己内积大于1
+
+2. 不一样的函数内积是等于0的
+
+勒让德多项式
+
+# 20260212
+
+## 计划
+
+- [ ] 单词
+
+- [ ] 1小时神经时序数据分析
+
+- [ ] 2小时信号与系统
+
+- [ ] 2小时深度学习
+
+
+
+## 杂项
+
+1. 早睡早起
+
+2. 运动可以规划上了
+
+3. 中午小睡的闹钟要订上
