--- a/_posts/2026-02-10-神经时序数据分析.md
+++ b/_posts/2026-02-10-神经时序数据分析.md
@@ -60,13 +60,59 @@ tags:
 
 ### 2.6 Advantages of Time-Frequency-Based Approaches
 
+1. 时频分析能用神经振荡来解释
+
+2. 神经振荡最有前途把不同物种，不同神经科学的领域连接起来
+
+3. 时频分析能反映更多大脑状态空间的信息
+
+### 2.7 Limitations of Time-Frequency-Based Approaches
+
+1. 会减少时间精度<mark>(lower frequencies generally suffer from more loss of  temporal precision)</mark>
+
+2. 分析多样且复杂，还有统计复杂 
+
+### 2.8 Temporal Resolution, Precision, and Accuracy of EEG
+
+1. accuracy反映的是离理想值的距离
+
+2. resolution 反映的是点的多少
+
+3. precision是反映点之间的距离,temporal precision 取决于应用的分析方法
+
+<mark>相比之下，1赫兹带通滤波活动的时间精度要低得多，因为1赫兹活动的每一毫秒都是对时间上邻近活动（可达数秒的活动）的加权平均。这意味着存在一定的时间泄漏，发生在200毫秒处的1赫兹事件会影响600毫秒处的1赫兹结果。</mark>
+
+高temporal accuracy的原因是由于电活动传导极快
+
+<mark>precision的理解还有待加强</mark>
+
+### 2.9 Spatial Resolution, Precision, and Accuracy of EEG
+
+fMRI是高空间分辨率的
+
+EEG的空间分辨率增加是否有意义是根据任务来看的
+
+三个尺度
+
+1. 1立方毫米，测不到，因为活动太小
+
+2. 1立方厘米，需要spatial技术<mark>surface Laplacian or  source space imaging.</mark>
+
+3. 几立方厘米
+
+### 2.10 Topographical Localization versus Brain Localization
+
 ### 
 
 ### 常识
 
-EEG 测量单位 microvolts or μV
+- EEG 测量单位 microvolts or μV
 
-gamma band (30 –80 Hz)
+- gamma band (30 –80 Hz)
+
+- For most analyses,  temporal resolutions between 250 and 1000 Hz are sufficient and appropriate.
+
+- In [neuroscience](https://en.wikipedia.org/wiki/Neuroscience "Neuroscience"), the **P300** (**P3**) wave is an [event-related potential](https://en.wikipedia.org/wiki/Event-related_potential "Event-related potential") (ERP) component elicited during [decision making](https://en.wikipedia.org/wiki/Decision-making#Neuroscience "Decision-making"), commonly seen in [electroencephalogram](https://en.wikipedia.org/wiki/Electroencephalography "Electroencephalography") (EEG) recodings. It is considered an [endogenous](https://en.wikipedia.org/wiki/Endogeny_(biology) "Endogeny (biology)") [potential](https://en.wikipedia.org/wiki/Action_potential "Action potential"),[[3]](https://en.wikipedia.org/wiki/P300_(neuroscience)#cite_note-3) as its occurrence links not to the physical attributes of a stimulus, but to a person's reaction to it. More specifically, the P300 is thought to reflect processes involved in stimulus evaluation or categorization.
 
 ### 生词
 
@@ -87,3 +133,9 @@ gamma band (30 –80 Hz)
 - ADJ-GRADED [usually ADJ n] If there is an ample amount of something, there is enough of it and usually some extra. 大量的；充裕的；丰富的
 
 - occipital 枕叶
+
+- VERB If something exacerbates a problem or bad situation, it makes it worse. 使恶化;使加剧 [formal]
+
+- N-COUNT If you refer to someone as an oddball, you think they behave in a strange way. 行为古怪的人；怪人 [informal]
+
+- ADJ [usually ADJ n] A topographical survey or map relates to or shows the physical features of an area of land, for example its hills, valleys, and rivers. 地形的;地貌的
