--- a/_posts/2026-02-08-灵感.md
+++ b/_posts/2026-02-08-灵感.md
@@ -9,3 +9,4 @@ tags:
 # 灵感
 
 - 借鉴深度学习网络中的训练网络的方法来运用到果蝇遗传筛选中，比如固定某些基因区域不变，就好比给权重增加限制。
+- 早上看到一个新闻就好比之前的一个感觉舌头也能看到东西，就比如把视觉神经接到味觉处理的脑区，就是一个模式识别的问题只要能对应起来就可以。或者说摸到颜色，这个感觉可以好好思考下。
