--- a/_posts/2026-02-09-20260209-20260215周记.md
+++ b/_posts/2026-02-09-20260209-20260215周记.md
@@ -76,7 +76,7 @@ tags:
 
 - [x] 单词
 
-- [x]  深度学习两小时
+- [x] 深度学习两小时
 
 - [x] 信号与系统，不一定要听课，复习搞懂之前没懂的也可以2小时
 
@@ -134,13 +134,11 @@ tags:
 
 - [ ] 单词
 
-- [ ] 1小时神经时序数据分析
+- [x] 1小时神经时序数据分析
 
 - [ ] 2小时信号与系统
 
 - [ ] 2小时深度学习
-
-
 
 ## 杂项
 
@@ -149,3 +147,9 @@ tags:
 2. 运动可以规划上了
 
 3. 中午小睡的闹钟要订上
+
+中午小睡还是睡过头了，我觉得在桌子上趴一会会比较好，我觉得还是把门锁上，耳罩带上，冷静下来，做自己该做的事，闹铃也定好晚上12：00睡觉，早上8点钟起床，周六周天，现在专注于调剂的计划。
+
+
+
+昨天很糟糕，今天很糟糕，早上5点半就被我妈搞醒了，她想害死我，她想害死我，她想害死我，她想害死我，她想害死我，她精神有问题，有精神疾病，这一点从篮球场上那次就看出来，在这样的家庭，待得时间越长离死亡越近，远离这样的家庭才是正确的选择，准备买明天的车，直接去北京。
