--- a/_posts/2026-02-10-神经时序数据分析.md
+++ b/_posts/2026-02-10-神经时序数据分析.md
@@ -1,12 +1,12 @@
 ---
-title: '神经时序数据分析'
+title: '神经时序数据分析第二章'
 date: 2026-02-10
-permalink: /posts/2026/02/神经时序数据分析/
+permalink: /posts/2026/02/神经时序数据分析第二章/
 tags:
     - 神经时序数据分析
 ---
 
-# 神经时序数据分析
+# 神经时序数据分析第二章
 
 第一章咱先跳过，后面烦了再看下，没懂的用黄色标记出来。  
 
@@ -102,7 +102,23 @@ EEG的空间分辨率增加是否有意义是根据任务来看的
 
 ### 2.10 Topographical Localization versus Brain Localization
 
-### 
+Topographical Localization意思是确定是哪个电极，<mark>并一定不意味着活动就产生在那个电极下面？？？ </mark>
+
+而brain localization意味着不只是一个observation 还是一个interpretation，，关键在于一个observation有很多种可能。
+
+### 2.11 EEG or MEG?
+
+1. eeg可以测径向也可以测切向
+
+2. meg只能测切向，对径向不是那么敏感，优点在于测高频，因为eeg高频传导损失得厉害
+
+3. eeg需要湿电极，对被试来说比较麻烦
+
+4. the forward model是什么玩意啊，
+
+5. 由于eeg的现实因素比如电极少，电导难测量，等导致source reconstruction accuracy比meg要低
+
+6. 实际上好的EEG设备花费和MEG，MRI差不多
 
 ### 常识
 
@@ -139,3 +155,7 @@ EEG的空间分辨率增加是否有意义是根据任务来看的
 - N-COUNT If you refer to someone as an oddball, you think they behave in a strange way. 行为古怪的人；怪人 [informal]
 
 - ADJ [usually ADJ n] A topographical survey or map relates to or shows the physical features of an area of land, for example its hills, valleys, and rivers. 地形的;地貌的
+
+- V-ERG If a quality emanates from you, or if you emanate a quality, you give people a strong sense that you have that quality. 表现出;散发;流露 [formal]
+
+- ADJ-GRADED If you describe a food or other substance as gooey, you mean that it is very soft and sticky. 软而黏的；黏糊糊的 [informal]
