20260216增加了照片还有总结

--- a/_posts/2026-02-09-20260209-20260215周记.md
+++ b/_posts/2026-02-09-20260209-20260215周记.md
@@ -150,6 +150,36 @@ tags:
 
 中午小睡还是睡过头了，我觉得在桌子上趴一会会比较好，我觉得还是把门锁上，耳罩带上，冷静下来，做自己该做的事，闹铃也定好晚上12：00睡觉，早上8点钟起床，周六周天，现在专注于调剂的计划。
 
+昨天很糟糕，今天很糟糕，早上5点半就被我妈搞醒了，她想害死我，她想害死我，她想害死我，她想害死我，她想害死我，她精神有问题，有精神疾病，这一点从篮球场上那次就看出来，在这样的家庭，待得时间越长离死亡越近，远离这样的家庭才是正确的选择，准备买明天的车，直接去北京。 
 
+20260213
 
-昨天很糟糕，今天很糟糕，早上5点半就被我妈搞醒了，她想害死我，她想害死我，她想害死我，她想害死我，她想害死我，她精神有问题，有精神疾病，这一点从篮球场上那次就看出来，在这样的家庭，待得时间越长离死亡越近，远离这样的家庭才是正确的选择，准备买明天的车，直接去北京。
+20260214
+
+# 20260215
+
+今天腊月二十八，开车往返火烧湾，坟前祭祖，和大伯吃饭，什么事都没做，然后意识到自己的白发问题，还有头皮红肿问题实际上没解决，我想解决这两个问题，我也知道自己身体状态很差，今年表现得尤其明显，感觉有时候老是不知道什么词来表达，自慰害人啊。自己心理要提起这根弦，今天早上又跟家里吵了，感觉家里很累，意识到自己的身体问题感觉也是一个好事吧
+
+最近我被我妹批评了两点我进行了一下反思：第一点就是对待熟的人，自己存在“亲近生侮慢”的问题，反而没有不熟的人比较有礼貌，另外一点我算是理清了你之前对我高情商的批评建议，你说我说话好像百分百肯定，我妹也说了这一点，她就形象的说，负面情况我可能就像一些网络评论区中那些留言，对某件事进行武断评价，尤其是那种不对的评价，导致人没有与其争论的欲望，认为其不会接受别人的观点，而且别人也没有义务跟我讨论观点，我觉得师兄对我，可能就是这个情况，这个可能也和我之前一个朋友说我的缺点是固执是一脉相承的。
+
+我的目标是把电路原理和信号与系统过一遍，我想去上科大，如果考研成绩太差的话就去北京，调剂到电子信息类，最好能去一个中科院所，所以出分是一个很关键的节点，最好复试前把那本时序的书过一遍。
+
+## 计划
+
+- [ ] 单词复习60个
+
+- [ ] 看一小时神经数据分析
+
+我觉得读经济学人的方式就是先略读briefing 还有the world this week，还有leader，letter China等栏目，后面的finance business还有science是绝对的略读。详细读一篇briefing最好了，贪多嚼不烂。
+
+# 复盘
+
+最后晚上回来啥都没做，不够专注，被知乎赚钱的短期刺激所吸引，一定要解决动力的问题，就是要快乐，做的时候想着把这个做了就能怎么怎么样，会更有动力，更能坚持下去。
+
+早上一起来，看下日历，意识到今天是除夕，可预料到的是一大波祝福正在路上，某种意义上讲感觉有可能会是有史以来第一次ai通过人类和另一个ai互发祝福语。
+
+其实我感觉一个经过思考的祝福语还是很有意思的，要么反映祝福者自身对不同价值的重视程度，要么反映他认为被祝福者所重视的价值，对我而言，我本来总是觉得只有祝幸运这种无需主观付出的祝福语才符合祝福的本质，问了下AI,它一如既往提供了我思维方式的结构性缺陷导致的经常性的忽视情感方面的作用。（不过也要小心它本身回答所提供的情绪价值[捂脸]）
+
+跳出来想想，不久的之前，想得到对一件事情不同的看法，是何等的困难，如今又是如何的易如反掌，人对事物的看法很容易深刻且全面，有时不禁想像未来的人类上限，夸张的讲:有可能几十年就进化成的新人类，会评价AI前的人：有很大的时代局限性。
+
+最后新年即将开始，我提前祝大家收到有心的祝福，也祝大家新年好运连连，身体健康，实现自身价值，万事如意！！！
