--- a/_posts/2026-02-12-神经时序数据分析第三章.md
+++ b/_posts/2026-02-12-神经时序数据分析第三章.md
@@ -1,9 +1,56 @@
 ---
-
 title: '神经时序数据分析第三章'
 date: 2026-02-12
 permalink: /posts/2026/02/神经时序数据分析第三章/
 tags:
     - 神经时序数据分析
-
 ---
+
+# 3 Interpreting and Asking Questions about Time-Frequency Results
+
+## 3.1 EEG Time-Frequency: The Basics
+
+<mark>power  is the amount of energy in a frequency band and is the squared amplitude of the oscillation.</mark>power和phase是独立的
+
+三方面:
+
+1. 频率
+
+2. 相位
+
+3. power
+- 关于EEG到底测量的是什么东西:The oscillations measured by EEG reflect fluctuations in dendritic electrical activity of  populations of neurons.
+
+- 时间和频率的precision是互为成本的
+
+- background activity就是不受task events调节，而且很难用神经认知过程解释，因此baseline normalization很有用
+
+- 对于task-related activity可以分为phase-locked和non-phase-locked两类，<mark>有没有比较好的例子可以举例的</mark>
+
+- <mark>and all ERPs are examples  of phase-locked activities.</mark>
+
+- 有一个电极记录不同的neural source的oscillation，也有不同的电极记录同一个neural source的问题，这个问题影响连接性分析
+
+## 3.2 Ways to View Time-Frequency Results
+
+1. the frequency slice横轴是频率，纵轴是power
+
+2. time slice，横轴是时间纵轴是power,意思就是针对某一特定频率
+
+3. space slice ，就是对某一频率<mark>or the average over multiple adjacent time-frequency points,</mark>某一时间，我猜指标是power，这样才有利于topographical localization
+
+4. time-frequency slice
+
+
+
+## 3.6 Do Results in Time-Frequency Plots Mean That There Were Neural Oscillations?
+
+这个就很难讲，因为任何函数根据傅里叶定理都可以写成sin函数求和的形式，但是我看了小鼠睡眠的时候的波形我觉得是有oscillation的，但真的是sin的形式吗？这个我不觉得那么肯定。而且有可能有些是产生振荡的但有些不产生振荡，不产生振荡的也能被时频分解，这样你就没法判断了。
+
+# 生词
+
+ADJ-GRADED [usually ADJ n] A spurious argument or way of reasoning is incorrect, and so the conclusion is probably incorrect. (论点、推理)不正确的，站不住脚的 [disapproval]
+
+VERB If someone inflates the amount or effect of something, they say it is bigger, better, or more important than it really is, usually so that they can profit from it. 夸张;夸大;吹嘘
+
+
